--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
     && mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
     && cd ../
   - git clone https://github.com/DevelopmentOnTheEdge/be-sql.git
-    && cd beanexplorer
+    && cd be-sql
     && mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
     && cd ../
 install:
