--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
     && cd ../
   - git clone https://github.com/DevelopmentOnTheEdge/be-sql.git
     && cd be-sql
-    && mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+    && mvn install -Dmaven.test.skip=true -Dmaven.javadoc.skip=true -B -V
     && cd ../
 install:
   - mvn test-compile -DskipTests=true -Dmaven.javadoc.skip=true -B -V
