--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,13 @@ before_install:
     && cd beanexplorer
     && mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
     && cd ../
+  - git clone https://github.com/DevelopmentOnTheEdge/xmltest.git
+    && cd xmltest
+    && mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+    && cd ../
   - git clone https://github.com/DevelopmentOnTheEdge/be-sql.git
     && cd be-sql
-    && mvn install -Dmaven.test.skip=true -Dmaven.javadoc.skip=true -B -V
+    && mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
     && cd ../
 install:
   - mvn test-compile -DskipTests=true -Dmaven.javadoc.skip=true -B -V
