--- a/util/app/pom.xml
+++ b/util/app/pom.xml
@@ -97,7 +97,7 @@
         <configuration>
           <url>${deployServerUrl}</url>
           <server>${deployServerName}</server>
-          <path>/${deployPath}</path>
+          <path>${deployPath}</path>
         </configuration>
       </plugin>
       <plugin>
@@ -109,6 +109,7 @@
         </configuration>
         <executions>
           <execution>
+            <id>generate-context</id>
             <phase>prepare-package</phase>
             <goals>
               <goal>generate-context</goal>
