add jetty stopKey, stopPort, for test stopping container

--- a/util/app/pom.xml
+++ b/util/app/pom.xml
@@ -199,6 +199,8 @@
               <value>100000000</value>
             </systemProperty>
           </systemProperties>
+          <stopKey>stop</stopKey>
+          <stopPort>8201</stopPort>
         </configuration>
       </plugin>
       <plugin>
