Be5SqlQueryExecutor use QRec and QRecParser, fix BLOB/TEXT(Blob/Clob or String) types, use in QueriesService.query for support be tags, CellFormatter

--- a/query/src/test/resources/project.yaml
+++ b/query/src/test/resources/project.yaml
@@ -5,6 +5,7 @@ queryTestProject:
   modules: []
   application:
   - classifications
+  - testData
   - testtable
   - testtableAdmin
   - testSubQuery
