--- a/query/src/test/resources/src/meta/entities/testtable.yaml
+++ b/query/src/test/resources/src/meta/entities/testtable.yaml
@@ -194,58 +194,28 @@ testtable:
             FROM
               testtable t
   - TestMultipleColumn:
-      type: 1D_unknown
-      invisible: true
-      roles: '@AllRoles'
       code: |-
-        SELECT *
-        FROM testtable
-        WHERE 1=1
+        SELECT ID AS "___ID", name FROM testtable WHERE 1=1
           AND name IN <parameter:name multiple="true" refColumn="testtable.name" />
   - TestMultipleColumnLong:
-      type: 1D_unknown
-      invisible: true
-      roles: '@AllRoles'
       code: |-
-        SELECT *
-        FROM testtable
-        WHERE 1=1
+        SELECT ID AS "___ID", name FROM testtable WHERE 1=1
           AND ID IN <parameter:ID multiple="true" refColumn="testtable.ID" />
   - TestResolveRefColumn:
-      type: 1D_unknown
-      invisible: true
-      roles: '@AllRoles'
       code: |-
-        SELECT *
-        FROM testtable
-        WHERE 1=1
+        SELECT ID AS "___ID", name FROM testtable WHERE 1=1
           AND name = <parameter:name refColumn="testtable.name" />
   - TestResolveRefColumnByAlias:
-      type: 1D_unknown
-      invisible: true
-      roles: '@AllRoles'
       code: |-
-        SELECT *
-        FROM testtable t
-        WHERE 1=1
+        SELECT ID AS "___ID", name FROM testtable WHERE 1=1
           AND name = <parameter:name refColumn="t.name" />
   - TestResolveRefColumnIllegalAE:
-      type: 1D_unknown
-      invisible: true
-      roles: '@AllRoles'
       code: |-
-        SELECT *
-        FROM testtable
-        WHERE 1=1
+        SELECT ID AS "___ID", name FROM testtable WHERE 1=1
           AND name = <parameter:name refColumn="public.testtable.name" />
   - TestResolveRefColumnNPE:
-      type: 1D_unknown
-      invisible: true
-      roles: '@AllRoles'
       code: |-
-        SELECT *
-        FROM testtable
-        WHERE 1=1
+        SELECT ID AS "___ID", name FROM testtable WHERE 1=1
           AND name = <parameter:name refColumn="testtable.unknownColumn" />
   - testBeSqlMacros:
       type: 1D_unknown
