--- a/util/app/pom.xml
+++ b/util/app/pom.xml
@@ -186,6 +186,14 @@
         <version>9.4.3.v20170317</version>
         <configuration>
           <scanIntervalSeconds>0</scanIntervalSeconds>
+          <webAppConfig implementation="org.eclipse.jetty.webapp.WebAppContext">
+            <sessionHandler implementation="org.eclipse.jetty.server.session.SessionHandler">
+              <sessionManager implementation="org.eclipse.jetty.server.session.HashSessionManager">
+                <storeDirectory>${basedir}/target/sessions</storeDirectory>
+                <idleSavePeriod>1</idleSavePeriod>
+              </sessionManager>
+            </sessionHandler>
+          </webAppConfig>
           <webApp>
             <webInfIncludeJarPattern>^$</webInfIncludeJarPattern>
             <containerIncludeJarPattern>^$</containerIncludeJarPattern>
