--- a/base/pom.xml
+++ b/base/pom.xml
@@ -27,6 +27,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.quartz-scheduler</groupId>
+      <artifactId>quartz</artifactId>
+      <version>2.3.0</version>
+    </dependency>
+
+    <dependency>
       <groupId>com.github.ben-manes.caffeine</groupId>
       <artifactId>caffeine</artifactId>
       <version>2.5.3</version>
