--- a/util/app/pom.xml
+++ b/util/app/pom.xml
@@ -227,13 +227,35 @@
         <executions>
           <execution>
             <goals>
+              <goal>compile</goal>
               <goal>addTestSources</goal>
               <goal>compileTests</goal>
               <goal>removeTestStubs</goal>
-              <goal>compile</goal>
             </goals>
           </execution>
         </executions>
+        <configuration>
+          <sources>
+            <source>
+              <directory>${project.basedir}/src/groovy/queries</directory>
+              <includes>
+                <include>**/*.groovy</include>
+              </includes>
+            </source>
+            <source>
+              <directory>${project.basedir}/src/groovy/operations</directory>
+              <includes>
+                <include>**/*.groovy</include>
+              </includes>
+            </source>
+            <source>
+              <directory>${project.basedir}/src/groovy/extenders</directory>
+              <includes>
+                <include>**/*.groovy</include>
+              </includes>
+            </source>
+          </sources>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -249,6 +271,20 @@
             <configuration>
               <sources>
                 <source>src/test/groovy</source>
+              </sources>
+            </configuration>
+          </execution>
+          <execution>
+            <id>add-source</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>add-source</goal>
+            </goals>
+            <configuration>
+              <sources>
+                <source>src/groovy/queries</source>
+                <source>src/groovy/operations</source>
+                <source>src/groovy/extenders</source>
               </sources>
             </configuration>
           </execution>
