add wrap to Be5Exception

--- a/server/src/test/resources/src/meta/entities/testtable.yaml
+++ b/server/src/test/resources/src/meta/entities/testtable.yaml
@@ -23,6 +23,7 @@ testtable:
       - Filter
       - OldRedirectFilter
       - CustomOperation
+      - FileNotFoundError
       code: |-
         SELECT
           t.name AS "Name",
@@ -96,3 +97,7 @@ testtable:
       type: Groovy
       roles: Administrator
       file: testtableAdmin/CustomOperation.groovy
+  - FileNotFoundError:
+      type: Groovy
+      roles: Administrator
+      file: testtableAdmin/FileNotFoundError.groovy
