--- a/modules/core/src/meta/entities/be5operationLogParams.yaml
+++ b/modules/core/src/meta/entities/be5operationLogParams.yaml
@@ -36,12 +36,10 @@ be5operationLogParams:
       type: 1D
       roles: Administrator
       operations:
-      - Clone
       - Delete
       - Edit
       - Filter
       - Insert
-      - Modify Parameters
       code: |-
         SELECT
           operLogID,
@@ -51,29 +49,19 @@ be5operationLogParams:
         FROM be5operationLogParams
         ORDER BY operLogID desc, type
   operations:
-  - Clone:
-      records: 1
-      roles: Administrator
-      code: com.beanexplorer.enterprise.operations.SilentCloneOperation
   - Delete:
       records: 2
       roles: Administrator
-      code: com.beanexplorer.enterprise.operations.SilentDeleteOperation
+      code: com.developmentontheedge.be5.server.operations.SilentDeleteOperation
   - Edit:
       records: 2
       roles: Administrator
-      code: com.beanexplorer.enterprise.operations.SilentEditOperation
+      code: com.developmentontheedge.be5.server.operations.SilentEditOperation
   - Filter:
       records: -1
       roles: Administrator
-      code: com.beanexplorer.enterprise.operations.HttpSearchOperation
+      code: com.developmentontheedge.be5.server.operations.FilterOperation
   - Insert:
       roles: Administrator
-      code: com.beanexplorer.enterprise.operations.SilentInsertOperation
-  - Modify Parameters:
-      records: -1
-      roles: '@AllRolesExceptGuest'
-      code: com.beanexplorer.enterprise.process.ModifyOfflineOperationParameters
-  - PermaLink:
-      records: 1
-      code: com.beanexplorer.enterprise.operations.PermaLink
+      code: com.developmentontheedge.be5.server.operations.SilentInsertOperation
+
