--- a/modules/core/src/meta/entities/be5operationLogs.yaml
+++ b/modules/core/src/meta/entities/be5operationLogs.yaml
@@ -51,7 +51,6 @@ be5operationLogs:
       type: 1D
       roles: Administrator
       operations:
-      - Clone
       - Delete
       - Edit
       - Filter
@@ -72,25 +71,19 @@ be5operationLogs:
           FROM be5operationLogs ol
           ORDER BY ol.executedAt DESC
   operations:
-  - Clone:
-      records: 1
-      roles: Administrator
-      code: com.beanexplorer.enterprise.operations.SilentCloneOperation
   - Delete:
       records: 2
       roles: Administrator
-      code: com.beanexplorer.enterprise.operations.SilentDeleteOperation
+      code: com.developmentontheedge.be5.server.operations.SilentDeleteOperation
   - Edit:
       records: 2
       roles: Administrator
-      code: com.beanexplorer.enterprise.operations.SilentEditOperation
+      code: com.developmentontheedge.be5.server.operations.SilentEditOperation
   - Filter:
       records: -1
       roles: Administrator
-      code: com.beanexplorer.enterprise.operations.HttpSearchOperation
+      code: com.developmentontheedge.be5.server.operations.FilterOperation
   - Insert:
       roles: Administrator
-      code: com.beanexplorer.enterprise.operations.SilentInsertOperation
-  - PermaLink:
-      records: 1
-      code: com.beanexplorer.enterprise.operations.PermaLink
+      code: com.developmentontheedge.be5.server.operations.SilentInsertOperation
+
