--- a/modules/core/src/meta/entities/mimeTypes.yaml
+++ b/modules/core/src/meta/entities/mimeTypes.yaml
@@ -19,7 +19,6 @@ mimeTypes:
       type: 1D
       roles: Administrator
       operations:
-      - Clone
       - Delete
       - Edit
       - Filter
@@ -28,25 +27,19 @@ mimeTypes:
         SELECT type AS "Code", name AS "Name"
          FROM mimeTypes
   operations:
-  - Clone:
-      records: 1
-      roles: Administrator
-      code: com.beanexplorer.enterprise.operations.SilentCloneOperation
   - Delete:
       records: 2
       roles: Administrator
-      code: com.beanexplorer.enterprise.operations.SilentDeleteOperation
+      code: com.developmentontheedge.be5.server.operations.SilentDeleteOperation
   - Edit:
       records: 2
       roles: Administrator
-      code: com.beanexplorer.enterprise.operations.SilentEditOperation
+      code: com.developmentontheedge.be5.server.operations.SilentEditOperation
   - Filter:
       records: -1
       roles: Administrator
-      code: com.beanexplorer.enterprise.operations.HttpSearchOperation
+      code: com.developmentontheedge.be5.server.operations.FilterOperation
   - Insert:
       roles: Administrator
-      code: com.beanexplorer.enterprise.operations.SilentInsertOperation
-  - PermaLink:
-      records: 1
-      code: com.beanexplorer.enterprise.operations.PermaLink
+      code: com.developmentontheedge.be5.server.operations.SilentInsertOperation
+
