--- a/modules/core/src/meta/entities/provinces.yaml
+++ b/modules/core/src/meta/entities/provinces.yaml
@@ -26,36 +26,25 @@ provinces:
       type: 1D
       roles: Administrator
       operations:
-      - Clone
+
       - Delete
       - Edit
-      - Explain Plan
       - Filter
       - Insert
       code: SELECT p.name AS Name, c.name AS Country FROM provinces p LEFT JOIN countries c ON p.countryID = c.ID
   operations:
-  - Clone:
-      records: 1
-      roles: Administrator
-      code: com.beanexplorer.enterprise.operations.SilentCloneOperation
   - Delete:
       records: 2
       roles: Administrator
-      code: com.beanexplorer.enterprise.operations.SilentDeleteOperation
+      code: com.developmentontheedge.be5.server.operations.SilentDeleteOperation
   - Edit:
       records: 2
       roles: Administrator
-      code: com.beanexplorer.enterprise.operations.SilentEditOperation
-  - Explain Plan:
-      roles: Administrator
-      code: com.beanexplorer.enterprise.operations.ExplainPlan
+      code: com.developmentontheedge.be5.server.operations.SilentEditOperation
   - Filter:
       records: -1
       roles: Administrator
-      code: com.beanexplorer.enterprise.operations.HttpSearchOperation
+      code: com.developmentontheedge.be5.server.operations.FilterOperation
   - Insert:
       roles: Administrator
-      code: com.beanexplorer.enterprise.operations.SilentInsertOperation
-  - PermaLink:
-      records: 1
-      code: com.beanexplorer.enterprise.operations.PermaLink
+      code: com.developmentontheedge.be5.server.operations.SilentInsertOperation
