--- a/query/src/test/resources/src/meta/entities/testtable.yaml
+++ b/query/src/test/resources/src/meta/entities/testtable.yaml
@@ -247,4 +247,4 @@ testtable:
   - Edit:
       records: 1
       roles: [Administrator]
-      code: com.developmentontheedge.be5.server.operations.SilentEditOperation
+      code: java.lang.String
