--- a/server/src/test/resources/src/meta/entities/testGenCollection.yaml
+++ b/server/src/test/resources/src/meta/entities/testGenCollection.yaml
@@ -16,3 +16,6 @@ testGenCollection:
     - categoryID:
         type: KEYTYPE
         reference: testtable
+    - isDeleted___:
+        type: ENUM('no','yes')
+        defaultValue: '''no'''
