--- a/server/src/test/resources/project.yaml
+++ b/server/src/test/resources/project.yaml
@@ -14,6 +14,7 @@ be5ServerTestProject:
   - testTypes
   - testCollection
   - testGenCollection
+  - testRestoredRecords
   - atest
   - rootMenu
   - meters
