add simple GetLogFiles

--- a/modules/core/src/meta/entities/_system_.yaml
+++ b/modules/core/src/meta/entities/_system_.yaml
@@ -28,6 +28,7 @@ _system_:
       invisible: true
       operations:
       - Reload project
+      - Get log files
       code: com.developmentontheedge.be5.modules.core.queries.system.meta.EntitiesTable
   - Queries:
       type: Java
@@ -98,3 +99,7 @@ _system_:
       type: Java
       roles: SystemDeveloper
       code: com.developmentontheedge.be5.modules.core.operations.system.DevReloadProject
+  - Get log files:
+      type: Java
+      roles: SystemDeveloper
+      code: com.developmentontheedge.be5.server.operations.GetLogFiles
