use Joint Compilation

--- a/util/app/pom.xml
+++ b/util/app/pom.xml
@@ -232,9 +232,13 @@
         <executions>
           <execution>
             <goals>
-              <goal>compile</goal>
+              <goal>addSources</goal>
               <goal>addTestSources</goal>
+              <goal>generateStubs</goal>
+              <goal>compile</goal>
+              <goal>generateTestStubs</goal>
               <goal>compileTests</goal>
+              <goal>removeStubs</goal>
               <goal>removeTestStubs</goal>
             </goals>
           </execution>
