move TableBuilder and model classes to server module, use QueryExecutor in DocumentGeneratorImpl

--- a/server/src/test/resources/project.yaml
+++ b/server/src/test/resources/project.yaml
@@ -13,6 +13,7 @@ be5ServerTestProject:
   - testtUser
   - testTypes
   - testCollection
+  - testData
   - testGenCollection
   - testRestoredRecords
   - atest
