--- a/server/src/test/resources/src/meta/entities/testtable.yaml
+++ b/server/src/test/resources/src/meta/entities/testtable.yaml
@@ -76,6 +76,26 @@ testtable:
         <if parameter="referenceTest">
           AND tTags.referenceTest = '<parameter:referenceTest/>'
         </if>
+  - withID:
+      type: 1D
+      operations: Edit
+      roles: '@AllRoles'
+      invisible: true
+      code: |-
+          SELECT
+            t.name AS "Name",
+            t.value AS "Value"
+          FROM testtable t
+  - beQuick:
+      type: 1D_unknown
+      roles: SystemDeveloper
+      invisible: true
+      code: |-
+          SELECT
+            123 as "___ID",
+            t.name AS "Name",
+            '<quick visible="true"/>' AS ";Name"
+          FROM testtable t
   operations:
   - Filter:
       roles: Administrator
