fix after refactor frontend

--- a/server/src/test/resources/src/meta/entities/testtable.yaml
+++ b/server/src/test/resources/src/meta/entities/testtable.yaml
@@ -25,6 +25,7 @@ testtable:
       - CustomOperation
       - FileNotFoundError
       - TestDownloadOperation
+      - TestModalDownloadOperation
       code: |-
         SELECT
           t.name AS "Name",
@@ -118,6 +119,10 @@ testtable:
       code: com.developmentontheedge.be5.server.operations.SilentInsertOperation
   - TestDownloadOperation:
       roles: Administrator
+      code: com.developmentontheedge.be5.server.controllers.DownloadOperationControllerTest$TestDownloadOperation
+  - TestModalDownloadOperation:
+      roles: Administrator
+      layout: '{"type":"modalForm"}'
       code: com.developmentontheedge.be5.server.controllers.DownloadOperationControllerTest$TestDownloadOperation
   - CustomOperation:
       type: Groovy
