--- a/server/src/test/resources/src/meta/entities/testtable.yaml
+++ b/server/src/test/resources/src/meta/entities/testtable.yaml
@@ -97,6 +97,14 @@ testtable:
             t.name AS "Name",
             '<quick visible="true"/>' AS ";Name"
           FROM testtable t
+  - beNoSort:
+      type: 1D_unknown
+      roles: SystemDeveloper
+      code: |-
+        SELECT
+          123 as "___ID",
+          t.name AS "Name;<nosort/>"
+        FROM testtable t
   operations:
   - Filter:
       roles: Administrator
