add be5querySettings.yaml #117

--- a/modules/core/project.yaml
+++ b/modules/core/project.yaml
@@ -16,6 +16,7 @@ core:
   - be5events
   - be5operationLogParams
   - be5operationLogs
+  - be5querySettings
   - categories
   - classifications
   - columnSettings
